# Howera

./: .env.example  AGENTS.md  CODEX_PROJECT_INSTRUCTIONS.md  CONTRIBUTING.md  env.md  pytest.ini
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-authenticate-api-requests-as-editor.md  1-2-create-and-read-owned-projects.md  1-3-create-jobs-in-owned-projects-and-read-owned-job-status.md  1-4-validate-internal-callback-secret.md  1-5-enforce-secure-logging-boundaries.md  2-1-confirm-job-upload-with-video-uri.md  2-2-start-workflow-run-for-an-upload-confirmed-job.md  3-1-enforce-fsm-transition-rules-and-lifecycle-invariants.md  (+26 more)
apps/api/: Makefile  pyproject.toml
apps/api/app/: __init__.py  errors.py  main.py
apps/api/app/adapters/auth/: __init__.py  base.py  firebase_auth.py  mock_auth.py
apps/api/app/core/: config.py  logging_safety.py
apps/api/app/domain/: export_fsm.py  instruction_validation.py  job_fsm.py
apps/api/app/repositories/: memory.py
apps/api/app/routes/: __init__.py  dependencies.py  instructions.py  internal.py  jobs.py  projects.py
apps/api/app/schemas/: auth.py  error.py  instruction.py  internal.py  job.py  project.py
apps/api/app/services/: instructions.py  internal_callbacks.py  jobs.py  projects.py
apps/api/tests/: test_auth_middleware.py  test_instructions_ownership.py  test_internal_callback_transactions.py  test_job_fsm.py  test_jobs_ownership.py  test_projects_ownership.py
docs/: consistency-checklist.md  dev-setup.md  golden-path.md
spec/: sas.md
tests/: README.md  high_risk_cases.csv
(+32 files in other folders)
